# vda2-project

./: CMakeLists.txt  Cell grouping module  README.md  placement_visualizer.py
data/: ._toy01.kiaPad  ._toy02.net
data/ibm01/: ._ibm01.kiaPad  ibm01.kiaPad  wirelength.txt
data/ibm03/: ibm03.kiaPad  wirelength.txt
data/toy01/: toy01.are  toy01.kiaPad  toy01.net  wirelength.txt
data/toy02/: preSpread.kiaPad  toy02.are  toy02.kiaPad  toy02.net  wirelength.txt
fastplace/src/: main.cpp
include/: placer.hpp
results/: ibm01-spread.kiaPad  ibm01.kiaPad  ibm03-spread.kiaPad  ibm03.kiaPad  toy01-spread.kiaPad  toy01.kiaPad  wirelengths.txt
sfqplace/include/: grouping.hpp  netlist.hpp  partioning.hpp  partitioning.hpp
sfqplace/src/: grouping.cpp  main.cpp  netlist.cpp  partitioning.cpp  supercells.cpp
src/: placer.cpp
